--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a team-based 4v4 (currently) PvP game. Players are score points for their team by defeating players on the opposing team.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
